Add some test cases, some small reorganization, and disable detection of globals.

--- a/package.json
+++ b/package.json
@@ -31,5 +31,15 @@
     "browserify": "^14.4.0",
     "commander": "^2.11.0",
     "fs-extra": "^4.0.2"
+  },
+  "devDependencies": {
+    "bluebird": "^3.5.1",
+    "chai": "^4.1.2",
+    "klaw": "^2.1.0",
+    "mocha": "^4.0.1",
+    "sinon": "^4.0.1",
+    "tmp-promise": "^1.0.3",
+    "tsify": "^3.0.3",
+    "typescript": "^2.5.3"
   }
 }
