--- a/.jshintrc
+++ b/.jshintrc
@@ -1,8 +1,7 @@
 {
   "undef": true,
   "unused": "vars",
-  "asi" : true,
-  "eqnull": true,
+  "globalstrict": true,
   "node": true,
   "esnext": true
 }
